--- a/covid_19.html
+++ b/covid_19.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Bike Share Sales Analysis</title>
+		<title>Covid_19_Trend_Analysis</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
